checking in for update

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -2,7 +2,7 @@
 :root {
     --primary-color: #5c164e;
     --secondary-color: #9b287b;
-    --text-color: rgb(2, 19, 7);
+    --text-color:#fff;
     --accent1-color: #4020395; /* Neon Pink */
     --accent2-color: #170f11; /* Bright Yellow */
 
